trunk/Archive2/fd/8634b64532983f/output
main.cpp: In function 'int main()':
main.cpp:15:6: error: 'a' was not declared in this scope
      a = std::mem_fn        (&X::easy); // no problem at all
      ^
